[project]
name = "change"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "linkchecker",
    "mccole>=0.5.0"
]

[tool.mccole]
skips = ["CONTRIBUTING.md", "extras", "templates"]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"LICENSE.md" = "license"
"bibliography.md" = "bibliography"
"glossary.md" = "glossary"
